Fixed alignment of idle duration text.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1877,6 +1877,7 @@ room-members-sidebar-width = 200px
 
   .idle-duration
     white-space nowrap
+    vertical-align 3px
 
   .status-text
     white-space pre-wrap // Preserve whitespace.
